n8n/argocd-files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-prod
  namespace: n8n-prod
  labels:
    app: n8n
spec:
  selector:
    app: n8n
  ports:
  - port: 5678
    targetPort: 5678
  type: NodePort
